--- a/examples/simple/simple.tex
+++ b/examples/simple/simple.tex
@@ -1,5 +1,8 @@
 \documentclass{article}
-\input include
+\usepackage{amsmath}
+\usepackage{amssymb}
+
+% \input include
 
 \title{Title}
 \date{Dec 2015 -- 2016}
